# ChangeLog for app-editors/ghex
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/ghex/ChangeLog,v 1.31 2006/12/21 04:25:22 compnerd Exp $

  21 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org> -ghex-1.2.1.ebuild:
  gnome-1.x removal

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> ghex-2.8.1.ebuild:
  ppc stable

  10 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> ghex-2.8.1.ebuild:
  Stable on sparc

  10 Oct 2006; Jason Huebel <jhuebel@gentoo.org> ghex-2.8.1.ebuild:
  stable on amd64

  19 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> ghex-2.2.1.ebuild:
  Marked stable on amd64 bug #148036

  02 Dec 2004; Joe McCann <joem@gentoo.org> ghex-2.8.1.ebuild:
  adding missing popt dep

*ghex-2.8.1 (02 Dec 2004)

  02 Dec 2004; Joe McCann <joem@gentoo.org> ghex-2.8.1.ebuild:
  remove subdeps and making sure to never again add dupe deps. Also adding
  gnome2 destdir stuff

  01 Dec 2004; Joe McCann <joem@gentoo.org> :
  Overdue bump to latest version. Updated old deps and added new ones
  (gconf,gnome-vfs,libbonoboui) Thanks to everybody on bug #57595

  25 Oct 2004; Tom Martin <slarti@gentoo.org> ghex-2.4.1.ebuild:
  Marked ~amd64, see bug 68801.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> ghex-2.2.1.ebuild,
  ghex-2.4.0.1.ebuild, ghex-2.4.1.ebuild:
  Masked ghex-2.4.1.ebuild testing for ppc

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> ghex-2.2.1.ebuild,
  ghex-2.4.0.1.ebuild:
  Masked ghex-2.4.0.1.ebuild stable for ppc

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> ghex-2.2.1.ebuild:
  Masked ghex-2.2.1.ebuild stable for ppc

  22 Sep 2004; Michael Hanselmann <hansmi@gentoo.org> :
  Added to ~ppc, bug 64071.

  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> ghex-2.2.1.ebuild:
  sync IUSE (-nls)

  16 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> ghex-2.2.1.ebuild:
  Marked ~amd64.

*ghex-2.4.1 (14 Feb 2004)
