@@ -1,7 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ghex-2.2.1.tar.bz2 579890 RMD160 96b32ed70bd1e4c5dc451f285b4c5273b6da2edd SHA1 218ad2e0be093cdb3249c47ce4f442de3e43bb37 SHA256 2929639d8224d92c698368447fe5c6e678b473653ace0509d75c75e80331eecb
 DIST ghex-2.4.0.1.tar.bz2 906578
 DIST ghex-2.4.1.tar.bz2 920669
 DIST ghex-2.8.1.tar.bz2 1049361 RMD160 bb224915eb33fb1ae6f157ad8582074be58ac2fb SHA1 25b6922ad1a6711f5f42af7558b50ef63d7873cb SHA256 34f1954c2b246edf5f381d65cede58b1ab2f1f6433ed6384040b2940c780d5af
+DIST ghex-2.8.2.tar.bz2 955164 RMD160 26fbd8d4c80724f13790d9f67d6d366da2fb8929 SHA1 bdc94d039a95dd243923fcf420003f951d223ebe SHA256 47142d1903ac8cf09d888a4a349e0a6ea671314354937b63a544b829e008861d
 EBUILD ghex-2.2.1.ebuild 665 RMD160 871f7d4c05fa3641da0af0ebee46769ebf866d56 SHA1 7b302cd298e9dbb499792d36db4b91ba37711ebd SHA256 c4ee31a2711f79bde6edcb1007e005af572a4779fe8b9b46a4a46d37afdfe6ff
 MD5 b3d3f4572e4af9fb1f03d7c6bf0ca687 ghex-2.2.1.ebuild 665
 RMD160 871f7d4c05fa3641da0af0ebee46769ebf866d56 ghex-2.2.1.ebuild 665
@@ -18,10 +22,14 @@ EBUILD ghex-2.8.1.ebuild 748 RMD160 124caae4220cac03acd2c87224fbf7cb002fb536 SHA
 MD5 2a148c951bad8ddd0bca67c561e3308f ghex-2.8.1.ebuild 748
 RMD160 124caae4220cac03acd2c87224fbf7cb002fb536 ghex-2.8.1.ebuild 748
 SHA256 27209b9711192bf118cdbe9d0b1c296fc12b28b8b1eadc17034c41a532b8ce00 ghex-2.8.1.ebuild 748
-MISC ChangeLog 3614 RMD160 4f35826f56d329b8a09fc6fc60980b6d2dc255a8 SHA1 055c880dc481acf186773c5084d35f1ab75ecdab SHA256 e4f1c98186f2ed2ae18c16c7ce9867a25cfa50179f214cb22ace156c6840fa5c
-MD5 91477c048b85dcaa55a21678358faf01 ChangeLog 3614
-RMD160 4f35826f56d329b8a09fc6fc60980b6d2dc255a8 ChangeLog 3614
-SHA256 e4f1c98186f2ed2ae18c16c7ce9867a25cfa50179f214cb22ace156c6840fa5c ChangeLog 3614
+EBUILD ghex-2.8.2.ebuild 720 RMD160 165b3fa467edfcec1ae67ba96a0e90a761de64da SHA1 69c2e05156c785fd1d5dac039e8580a2833ce302 SHA256 239ef6c2a5a480fbd59c3bdb1b89cd2d6007ea6a6011b1513e4c6d0162354620
+MD5 0245999bcf6da14e065cf329fd4972b8 ghex-2.8.2.ebuild 720
+RMD160 165b3fa467edfcec1ae67ba96a0e90a761de64da ghex-2.8.2.ebuild 720
+SHA256 239ef6c2a5a480fbd59c3bdb1b89cd2d6007ea6a6011b1513e4c6d0162354620 ghex-2.8.2.ebuild 720
+MISC ChangeLog 3744 RMD160 dadbbaf2371277dd66710c240798eb972c261666 SHA1 d0a95991bd073ab9ed5afdb4dab193a5b4dbdd53 SHA256 aaa4257891c5f393d8b6f71bb95b598fdefb5014fd90d39b621b481611a4f687
+MD5 c27a7c3c52d910456fc134e5f79b391e ChangeLog 3744
+RMD160 dadbbaf2371277dd66710c240798eb972c261666 ChangeLog 3744
+SHA256 aaa4257891c5f393d8b6f71bb95b598fdefb5014fd90d39b621b481611a4f687 ChangeLog 3744
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e metadata.xml 158
@@ -38,3 +46,13 @@ SHA256 82cd7d47e30b8218d54cc2c84099df39dd0ffb66d210990d42cab5280241916a files/di
 MD5 b3471bf8a5de3839880d8ada05c6253f files/digest-ghex-2.8.1 238
 RMD160 59bb2925e3fbf753b268f86f81ef151c817539b2 files/digest-ghex-2.8.1 238
 SHA256 7191eaf6b7ec82288953adabf92f3ea9bebd9dbe9fd3f33ec2bf82d10f4746e6 files/digest-ghex-2.8.1 238
+MD5 680b825a4204492901aaf280382ee620 files/digest-ghex-2.8.2 235
+RMD160 7b9591c62527c441c1d1bddb4b7b51220994b2ea files/digest-ghex-2.8.2 235
+SHA256 3b9295cafdc42a6f4f5d6383929d7e9ed536d91f601ae138344629c1c55ceb7a files/digest-ghex-2.8.2 235
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.6 (GNU/Linux)
+
+iD8DBQFFozu6keYb6olFHJcRAuZxAKCuY9EACNYYIga5iz/X537lbDzAOgCgzDV3
+599Dsf+ECBajGVwl2vuGeQU=
+=L5LF
+-----END PGP SIGNATURE-----
