@@ -1,0 +1,3 @@
+MD5 1940a9f63b0d37604c6b489cda37fc19 ghex-2.8.2.tar.bz2 955164
+RMD160 26fbd8d4c80724f13790d9f67d6d366da2fb8929 ghex-2.8.2.tar.bz2 955164
+SHA256 47142d1903ac8cf09d888a4a349e0a6ea671314354937b63a544b829e008861d ghex-2.8.2.tar.bz2 955164
