@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/ghex
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/ghex/ChangeLog,v 1.31 2006/12/21 04:25:22 compnerd Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/ghex/ChangeLog,v 1.32 2007/01/09 06:55:19 leio Exp $
+
+*ghex-2.8.2 (09 Jan 2007)
+
+  09 Jan 2007; Mart Raudsepp <leio@gentoo.org> +ghex-2.8.2.ebuild:
+  Version bump for translation updates
 
   21 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org> -ghex-1.2.1.ebuild:
   gnome-1.x removal
